added accessibility tags, added videos (hero-bg)

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Digital Spark - Your Growth Partner</title>
+    <meta
+      name="description"
+      content="Digital Spark is a leading digital marketing agency in Kenya, offering SEO, PPC, social media, web design, and more to ignite your online presence."
+    />
 
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Poppins:wght@600;700;800&display=swap"
@@ -12,8 +16,8 @@
 
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
-      integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCXd/XP=="
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+      integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
@@ -21,14 +25,21 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header class="main-header">
+    <header class="main-header" role="banner">
       <div class="container">
-        <a href="#" class="logo">Digital Spark</a>
-        <nav class="main-nav">
-          <button class="nav-toggle" aria-label="Toggle navigation">
+        <a href="#hero" class="logo" aria-label="Digital Spark Home"
+          >Digital Spark</a
+        >
+        <nav class="main-nav" role="navigation" aria-label="Main navigation">
+          <button
+            class="nav-toggle"
+            aria-label="Toggle navigation"
+            aria-expanded="false"
+            aria-controls="primary-menu"
+          >
             <span class="hamburger"></span>
           </button>
-          <ul class="nav-links">
+          <ul class="nav-links" id="primary-menu">
             <li><a href="#hero">Home</a></li>
             <li><a href="#services">Services</a></li>
             <li><a href="#portfolio">Portfolio</a></li>
@@ -39,10 +50,34 @@
       </div>
     </header>
 
-    <main>
-      <section id="hero" class="hero-section">
+    <main id="main-content">
+      <section id="hero" class="hero-section" aria-labelledby="hero-title">
+        <div class="hero-bg-video">
+          <video
+            id="heroVideo"
+            autoplay
+            muted
+            loop
+            playsinline
+            poster="https://images.pexels.com/photos/3130810/pexels-photo-3130810.jpeg?auto=compress&w=1200"
+          >
+            <source src="media/857195-hd_1280_720_25fps.mp4" type="video/mp4" />
+            <source
+              src="media/7308108-hd_1920_1080_24fps.mp4"
+              type="video/mp4"
+            />
+            <source
+              src="media/7616840-hd_1920_1080_24fps.mp4"
+              type="video/mp4"
+            />
+            Your browser does not support the video tag.
+          </video>
+          <div class="hero-bg-overlay"></div>
+        </div>
         <div class="container">
-          <h1 class="hero-title">Ignite Your Online Presence.</h1>
+          <h1 class="hero-title" id="hero-title">
+            Ignite Your Online Presence.
+          </h1>
           <p class="hero-subtitle">
             Data-driven strategies for unparalleled digital growth.
           </p>
@@ -50,16 +85,22 @@
         </div>
       </section>
 
-      <section id="services" class="section-padding bg-light-gray">
+      <section
+        id="services"
+        class="section-padding bg-light-gray"
+        aria-labelledby="services-title"
+      >
         <div class="container text-center">
-          <h2 class="section-title">Our Digital Marketing Solutions</h2>
+          <h2 class="section-title" id="services-title">
+            Our Digital Marketing Solutions
+          </h2>
           <p class="section-description">
             We offer a comprehensive suite of services designed to elevate your
             brand.
           </p>
           <div class="services-grid">
             <div class="service-card">
-              <i class="fas fa-search service-icon"></i>
+              <i class="fas fa-search service-icon" aria-hidden="true"></i>
               <h3>Search Engine Optimization (SEO)</h3>
               <p>
                 Improve your visibility on search engines and attract more
@@ -67,7 +108,7 @@
               </p>
             </div>
             <div class="service-card">
-              <i class="fas fa-bullhorn service-icon"></i>
+              <i class="fas fa-bullhorn service-icon" aria-hidden="true"></i>
               <h3>Paid Advertising (PPC)</h3>
               <p>
                 Maximize your ROI with targeted campaigns on Google, social
@@ -75,7 +116,7 @@
               </p>
             </div>
             <div class="service-card">
-              <i class="fas fa-share-alt service-icon"></i>
+              <i class="fas fa-share-alt service-icon" aria-hidden="true"></i>
               <h3>Social Media Marketing</h3>
               <p>
                 Build a strong community and engage with your audience across
@@ -83,7 +124,7 @@
               </p>
             </div>
             <div class="service-card">
-              <i class="fas fa-pencil-alt service-icon"></i>
+              <i class="fas fa-pencil-alt service-icon" aria-hidden="true"></i>
               <h3>Content Marketing</h3>
               <p>
                 Create compelling content that resonates with your audience and
@@ -91,7 +132,7 @@
               </p>
             </div>
             <div class="service-card">
-              <i class="fas fa-laptop-code service-icon"></i>
+              <i class="fas fa-laptop-code service-icon" aria-hidden="true"></i>
               <h3>Web Design & Development</h3>
               <p>
                 Craft stunning, user-friendly websites optimized for performance
@@ -99,7 +140,10 @@
               </p>
             </div>
             <div class="service-card">
-              <i class="fas fa-envelope-open-text service-icon"></i>
+              <i
+                class="fas fa-envelope-open-text service-icon"
+                aria-hidden="true"
+              ></i>
               <h3>Email Marketing</h3>
               <p>
                 Nurture leads and build lasting customer relationships through
@@ -110,16 +154,22 @@
         </div>
       </section>
 
-      <section id="why-choose-us" class="section-padding">
+      <section
+        id="why-choose-us"
+        class="section-padding"
+        aria-labelledby="why-title"
+      >
         <div class="container text-center">
-          <h2 class="section-title">Why Choose Digital Spark?</h2>
+          <h2 class="section-title" id="why-title">
+            Why Choose Digital Spark?
+          </h2>
           <p class="section-description">
             Our approach is built on proven strategies and a passion for your
             success.
           </p>
           <div class="features-grid">
             <div class="feature-item">
-              <i class="fas fa-chart-line feature-icon"></i>
+              <i class="fas fa-chart-line feature-icon" aria-hidden="true"></i>
               <h3>Data-Driven Strategies</h3>
               <p>
                 Every decision is backed by in-depth analysis and market
@@ -127,7 +177,7 @@
               </p>
             </div>
             <div class="feature-item">
-              <i class="fas fa-lightbulb feature-icon"></i>
+              <i class="fas fa-lightbulb feature-icon" aria-hidden="true"></i>
               <h3>Innovative Solutions</h3>
               <p>
                 We stay ahead of trends, offering cutting-edge tactics for
@@ -135,7 +185,7 @@
               </p>
             </div>
             <div class="feature-item">
-              <i class="fas fa-handshake feature-icon"></i>
+              <i class="fas fa-handshake feature-icon" aria-hidden="true"></i>
               <h3>Transparent Reporting</h3>
               <p>
                 Clear, regular reports keep you informed about your campaign's
@@ -143,7 +193,7 @@
               </p>
             </div>
             <div class="feature-item">
-              <i class="fas fa-users feature-icon"></i>
+              <i class="fas fa-users feature-icon" aria-hidden="true"></i>
               <h3>Dedicated Team</h3>
               <p>
                 A passionate team of experts committed to your unique business
@@ -154,17 +204,24 @@
         </div>
       </section>
 
-      <section id="portfolio" class="section-padding bg-light-gray">
+      <section
+        id="portfolio"
+        class="section-padding bg-light-gray"
+        aria-labelledby="portfolio-title"
+      >
         <div class="container text-center">
-          <h2 class="section-title">Our Recent Success Stories</h2>
+          <h2 class="section-title" id="portfolio-title">
+            Our Recent Success Stories
+          </h2>
           <p class="section-description">
             A glimpse into the impactful results we've achieved for our clients.
           </p>
           <div class="portfolio-grid">
             <div class="portfolio-item">
               <img
-                src="https://images.unsplash.com/photo-1557804506-69a4563a6234?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                src="https://images.pexels.com/photos/3183150/pexels-photo-3183150.jpeg?auto=compress&w=800"
                 alt="E-commerce SEO Case Study"
+                loading="lazy"
               />
               <div class="portfolio-overlay">
                 <h3>E-commerce SEO Growth</h3>
@@ -177,8 +234,9 @@
             </div>
             <div class="portfolio-item">
               <img
-                src="https://images.unsplash.com/photo-1549446452-f472856c1236?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                src="https://images.pexels.com/photos/607812/pexels-photo-607812.jpeg?auto=compress&w=800"
                 alt="Social Media Campaign"
+                loading="lazy"
               />
               <div class="portfolio-overlay">
                 <h3>Brand Awareness Social Campaign</h3>
@@ -190,8 +248,9 @@
             </div>
             <div class="portfolio-item">
               <img
-                src="https://images.unsplash.com/photo-1627855018693-54917454226d?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                src="https://images.pexels.com/photos/3861969/pexels-photo-3861969.jpeg?auto=compress&w=800"
                 alt="Lead Generation Website"
+                loading="lazy"
               />
               <div class="portfolio-overlay">
                 <h3>High-Converting Website Redesign</h3>
@@ -208,11 +267,14 @@
       <section
         id="testimonials"
         class="section-padding bg-dark-purple text-white"
+        aria-labelledby="testimonials-title"
       >
         <div class="container text-center">
-          <h2 class="section-title text-white">What Our Clients Say</h2>
-          <div class="testimonials-grid">
-            <div class="testimonial-card">
+          <h2 class="section-title text-white" id="testimonials-title">
+            What Our Clients Say
+          </h2>
+          <div class="testimonials-grid" role="list">
+            <div class="testimonial-card" role="listitem">
               <p class="testimonial-quote">
                 "Digital Spark transformed our online presence. Their SEO
                 expertise is unmatched, and we've seen incredible growth in
@@ -222,7 +284,7 @@
                 - Aisha Khan, CEO of GreenLife Organics
               </p>
             </div>
-            <div class="testimonial-card">
+            <div class="testimonial-card" role="listitem">
               <p class="testimonial-quote">
                 "The team at Digital Spark truly understands digital
                 advertising. Our PPC campaigns have never been more efficient or
@@ -232,7 +294,7 @@
                 - Benard Omondi, Marketing Director at Elite Fitness
               </p>
             </div>
-            <div class="testimonial-card">
+            <div class="testimonial-card" role="listitem">
               <p class="testimonial-quote">
                 "From stunning web design to engaging content, Digital Spark
                 exceeded our expectations. Our new website is a powerful sales
@@ -246,17 +308,20 @@
         </div>
       </section>
 
-      <section id="about" class="section-padding">
+      <section id="about" class="section-padding" aria-labelledby="about-title">
         <div class="container">
           <div class="about-content">
             <div class="about-image">
               <img
-                src="https://images.unsplash.com/photo-1522204523234-8729aa6e3d64?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                src="https://images.pexels.com/photos/1181406/pexels-photo-1181406.jpeg?auto=compress&w=800"
                 alt="Digital Marketing Team"
+                loading="lazy"
               />
             </div>
             <div class="about-text">
-              <h2 class="section-title">About Digital Spark</h2>
+              <h2 class="section-title" id="about-title">
+                About Digital Spark
+              </h2>
               <p>
                 Founded in 2017, Digital Spark is a dynamic digital marketing
                 agency dedicated to helping businesses thrive in the
@@ -277,9 +342,15 @@
         </div>
       </section>
 
-      <section id="contact" class="section-padding bg-light-gray">
+      <section
+        id="contact"
+        class="section-padding bg-light-gray"
+        aria-labelledby="contact-title"
+      >
         <div class="container">
-          <h2 class="section-title text-center">Let's Discuss Your Project</h2>
+          <h2 class="section-title text-center" id="contact-title">
+            Let's Discuss Your Project
+          </h2>
           <p class="section-description text-center">
             Reach out today for a personalized consultation.
           </p>
@@ -287,36 +358,56 @@
             <div class="contact-info">
               <h3>Contact Details</h3>
               <p>
-                <i class="fas fa-map-marker-alt"></i> Digital Spark Hub, 5th
-                Floor, Nairobi City Centre, Kenya
+                <i class="fas fa-map-marker-alt" aria-hidden="true"></i> Digital
+                Spark Hub, 5th Floor, Nairobi City Centre, Kenya
               </p>
-              <p><i class="fas fa-phone-alt"></i> +254 7XX XXX XXX</p>
-              <p><i class="fas fa-envelope"></i> info@digitalspark.co.ke</p>
-              <div class="social-links">
+              <p>
+                <i class="fas fa-phone-alt" aria-hidden="true"></i> +254 7XX XXX
+                XXX
+              </p>
+              <p>
+                <i class="fas fa-envelope" aria-hidden="true"></i>
+                <a href="mailto:info@digitalspark.co.ke"
+                  >info@digitalspark.co.ke</a
+                >
+              </p>
+              <div class="social-links" aria-label="Social media links">
                 <a href="#" aria-label="Facebook"
-                  ><i class="fab fa-facebook-f"></i
+                  ><i class="fab fa-facebook-f" aria-hidden="true"></i
                 ></a>
                 <a href="#" aria-label="Twitter"
-                  ><i class="fab fa-twitter"></i
+                  ><i class="fab fa-twitter" aria-hidden="true"></i
                 ></a>
                 <a href="#" aria-label="LinkedIn"
-                  ><i class="fab fa-linkedin-in"></i
+                  ><i class="fab fa-linkedin-in" aria-hidden="true"></i
                 ></a>
                 <a href="#" aria-label="Instagram"
-                  ><i class="fab fa-instagram"></i
+                  ><i class="fab fa-instagram" aria-hidden="true"></i
                 ></a>
               </div>
             </div>
             <div class="contact-form-container">
               <h3>Send Us a Message</h3>
-              <form class="contact-form">
+              <form class="contact-form" autocomplete="off" novalidate>
                 <div class="form-group">
                   <label for="name">Name:</label>
-                  <input type="text" id="name" name="name" required />
+                  <input
+                    type="text"
+                    id="name"
+                    name="name"
+                    required
+                    autocomplete="name"
+                  />
                 </div>
                 <div class="form-group">
                   <label for="email">Email:</label>
-                  <input type="email" id="email" name="email" required />
+                  <input
+                    type="email"
+                    id="email"
+                    name="email"
+                    required
+                    autocomplete="email"
+                  />
                 </div>
                 <div class="form-group">
                   <label for="subject">Subject:</label>
@@ -336,7 +427,7 @@
       </section>
     </main>
 
-    <footer class="main-footer">
+    <footer class="main-footer" role="contentinfo">
       <div class="container">
         <p>&copy; 2025 Digital Spark. All rights reserved.</p>
         <ul class="footer-links">
@@ -352,8 +443,11 @@
         const navLinks = document.querySelector('.nav-links')
 
         navToggle.addEventListener('click', () => {
+          const expanded =
+            navToggle.getAttribute('aria-expanded') === 'true' || false
           navLinks.classList.toggle('nav-active')
-          navToggle.classList.toggle('active') // For hamburger animation
+          navToggle.classList.toggle('active')
+          navToggle.setAttribute('aria-expanded', !expanded)
         })
 
         // Close nav when clicking a link (on mobile)
@@ -362,9 +456,33 @@
             if (navLinks.classList.contains('nav-active')) {
               navLinks.classList.remove('nav-active')
               navToggle.classList.remove('active')
+              navToggle.setAttribute('aria-expanded', 'false')
             }
           })
         })
+
+        // Hero background video switching with fade and progress bar
+        const video = document.getElementById('heroVideo')
+        const source = video.querySelector('source')
+        const sources = [
+          'media/857195-hd_1280_720_25fps.mp4',
+          'media/7308108-hd_1920_1080_24fps.mp4',
+          'media/7616840-hd_1920_1080_24fps.mp4',
+        ]
+        let current = 0
+        const timeToNextVideo = 4000 // 4 seconds
+
+        function switchVideo() {
+          video.classList.add('fading')
+          setTimeout(() => {
+            current = (current + 1) % sources.length
+            source.setAttribute('src', sources[current])
+            video.load()
+            video.play()
+            video.classList.remove('fading')
+          }, 800) // Match the CSS transition duration
+        }
+        setInterval(switchVideo, timeToNextVideo)
       })
     </script>
   </body>
